Issue592 packaging error (#594)
* Initial fix
* Fix for packaging error and switch to 0.4.1.1-SNAPSHOT